--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   firebase_auth: ^4.4.0
   firebase_core: ^2.9.0
   http: ^0.13.5
+  mobx: ^2.1.4
+  flutter_mobx: ^2.0.6+5
+  mobx_codegen: ^2.2.0
+  provider: ^6.0.1
   
 
 dev_dependencies:
@@ -50,6 +54,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.3.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
